--- a/src/components/Header/styles/header.sass
+++ b/src/components/Header/styles/header.sass
@@ -367,6 +367,9 @@ body
                     font-weight: 700
                     line-height: 142.857%
                     text-decoration: none
+                    transition: 0.3s all
+                    &:hover
+                        color: $selected
 
                 .active
                     color: $selected
