--- a/src/pages/SearchResult/styles/search_results.css
+++ b/src/pages/SearchResult/styles/search_results.css
@@ -152,4 +152,104 @@
     margin-top: clamp(4px, 0.8592910849vw, 16px) !important;
     margin-bottom: clamp(8px, 1.7185821697vw, 32px) !important;
   }
+}
+@media (min-width: 1024px) {
+  .tablet-content {
+    width: 100%;
+    display: flex !important;
+    flex-direction: column;
+    align-items: center;
+  }
+  .tablet-content .tablet-container {
+    width: auto;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .tablet-content .tablet-container .illustration {
+    width: clamp(266px, 27.70656vw, 1064px);
+    height: clamp(239.5px, 24.94632vw, 958px);
+    margin-right: clamp(32px, 3.33312vw, 128px);
+  }
+  .tablet-content .tablet-container .attention-window {
+    width: clamp(227px, 23.64432vw, 908px) !important;
+    height: auto;
+  }
+  .tablet-content .tablet-container .attention-window .window-heading {
+    color: #262626;
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: Lato;
+    font-size: clamp(9px, 0.93744vw, 36px);
+    font-style: normal;
+    font-weight: 600;
+    line-height: 125%;
+    margin-top: clamp(16px, 1.66656vw, 64px);
+  }
+  .tablet-content .tablet-container .attention-window .attention-icon {
+    font-size: clamp(9px, 0.93744vw, 36px);
+  }
+  .tablet-content .tablet-container .attention-window .icon-text {
+    font-size: clamp(9px, 0.93744vw, 36px);
+  }
+  .possible-products {
+    width: 100%;
+    height: auto;
+    background-color: #F5F5F5;
+    display: flex !important;
+  }
+  .possible-products .cards {
+    width: 50%;
+    display: flex;
+    flex-direction: row !important;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto;
+  }
+  .possible-products .cards .card {
+    width: clamp(150px, 15.624vw, 600px);
+    height: auto;
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    margin-top: clamp(16px, 1.66656vw, 64px);
+    margin-bottom: clamp(16px, 1.66656vw, 64px);
+  }
+  .possible-products .cards .card .card-content {
+    width: 80%;
+    height: auto;
+    margin-top: clamp(4px, 0.41664vw, 16px);
+    margin: auto;
+    margin-bottom: clamp(8px, 0.83328vw, 32px);
+  }
+  .possible-products .cards .card .card-content .card-title {
+    color: #000;
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: Lato;
+    font-size: clamp(9px, 0.93744vw, 36px);
+    font-style: normal;
+    font-weight: 600;
+    line-height: 125%;
+  }
+  .possible-products .cards .card .card-content .rating-container {
+    display: flex;
+    align-items: center;
+  }
+  .possible-products .cards .card .card-content .rating-container .star {
+    color: #FFC000;
+    font-size: clamp(7px, 0.72912vw, 28px);
+    margin-top: clamp(4px, 0.41664vw, 16px);
+    margin-bottom: clamp(4px, 0.41664vw, 16px);
+  }
+  .possible-products .cards .card .card-content .price {
+    color: #FF2E00;
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: Lato;
+    font-size: clamp(8px, 0.83328vw, 32px);
+    font-style: normal;
+    font-weight: 800;
+    line-height: 142.857%;
+    margin-top: clamp(4px, 0.41664vw, 16px) !important;
+    margin-bottom: clamp(8px, 0.83328vw, 32px) !important;
+  }
 }/*# sourceMappingURL=search_results.css.map */
