--- a/src/pages/SearchResult/styles/search_results.sass
+++ b/src/pages/SearchResult/styles/search_results.sass
@@ -151,3 +151,103 @@
                         line-height: 142.857%
                         margin-top: $m8tab !important
                         margin-bottom: $m16tab !important
+
+@media (min-width: 1024px)
+
+    .tablet-content
+        width: 100%
+        display: flex !important
+        flex-direction: column
+        align-items: center
+
+        .tablet-container
+            width: auto
+            height: auto
+            display: flex
+            align-items: center
+            justify-content: space-between
+
+            .illustration
+                width: clamp(266px,27.70656vw,1064px)
+                height: clamp(239.5px,24.94632vw,958px)
+                margin-right: $m64
+
+            .attention-window
+                width: clamp(227px,23.64432vw,908px) !important
+                height: auto
+
+                .window-heading
+                    color: $primary_gray
+                    font-feature-settings: 'clig' off, 'liga' off
+                    font-family: Lato
+                    font-size: $font18
+                    font-style: normal
+                    font-weight: 600
+                    line-height: 125%
+                    margin-top: $m32
+
+                .attention-icon
+                    font-size: $font18
+
+                .icon-text
+                    font-size: $font18
+
+    .possible-products
+        width: 100%
+        height: auto
+        background-color: #F5F5F5
+        display: flex !important
+
+        .cards
+            width: 50%
+            display: flex
+            flex-direction: row !important
+            align-items: center
+            justify-content: space-between
+            margin: auto
+
+            .card
+                width: clamp(150px,15.624vw,600px)
+                height: auto
+                display: flex
+                justify-content: center
+                background-color: $white
+                margin-top: $m32
+                margin-bottom: $m32
+
+                .card-content
+                    width: 80%
+                    height: auto
+                    margin-top: $m8
+                    margin: auto
+                    margin-bottom: $m16
+
+                    .card-title
+                        color: #000
+                        font-feature-settings: 'clig' off, 'liga' off
+                        font-family: Lato
+                        font-size: $font18
+                        font-style: normal
+                        font-weight: 600
+                        line-height: 125%
+
+                    .rating-container
+                        display: flex
+                        align-items: center
+
+                        .star
+                            color: $star
+                            font-size: $font14
+                            margin-top: $m8
+                            margin-bottom: $m8
+
+                    .price
+                        color: $discount
+                        font-feature-settings: 'clig' off, 'liga' off
+                        font-family: Lato
+                        font-size: $font16
+                        font-style: normal
+                        font-weight: 800
+                        line-height: 142.857%
+                        margin-top: $m8 !important
+                        margin-bottom: $m16 !important
